--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,9 +13,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:text="Login"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/login"
             app:layout_constraintEnd_toStartOf="@id/btn_join"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_password" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -23,9 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:text="Join now"
-            app:layout_constraintStart_toEndOf="@id/btn_login"
+            android:text="@string/join_now"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_login"
             app:layout_constraintTop_toBottomOf="@id/til_password" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -34,12 +34,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:hint="password"
+            android:hint="@string/password"
+            app:errorTextColor="@color/red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_email"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -52,11 +54,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:hint="Email"
+            android:hint="@string/email"
+            app:errorTextColor="@color/red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
