--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_primary">#FF03DAC5</color>
     <color name="color_secondary">#FF6200EE</color>
+    <color name="red">#F81100</color>
 </resources>
