--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,8 @@
         <item name="colorControlNormal">@color/white</item>
         <item name="android:background">@color/color_primary</item>
         <item name="titleTextColor">@color/white</item>
-        <item name="subtitleTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 </resources>
