--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.shoestore.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="@string/login">
         <action
             android:id="@+id/action_loginFragment_to_welcomeOnBoardingFragment"
             app:destination="@id/welcomeOnBoardingFragment"
@@ -17,5 +17,13 @@
     <fragment
         android:id="@+id/welcomeOnBoardingFragment"
         android:name="com.example.shoestore.WelcomeOnBoardingFragment"
-        android:label="WelcomeOnBoardingFragment" />
+        android:label="@string/welcome" >
+        <action
+            android:id="@+id/action_welcomeOnBoardingFragment_to_instructionsOnBoardingFragment"
+            app:destination="@id/instructionsOnBoardingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/instructionsOnBoardingFragment"
+        android:name="com.example.shoestore.InstructionsOnBoardingFragment"
+        android:label="InstructionsOnBoardingFragment" />
 </navigation>
