--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="main_title_style">
+    <style name="main_topic_header_style">
         <item name="android:textSize">18sp</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:textStyle">bold</item>
