--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,10 +20,30 @@
         android:label="@string/welcome" >
         <action
             android:id="@+id/action_welcomeOnBoardingFragment_to_instructionsOnBoardingFragment"
-            app:destination="@id/instructionsOnBoardingFragment" />
+            app:destination="@id/instructionsOnBoardingFragment"
+            app:popUpTo="@id/welcomeOnBoardingFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/instructionsOnBoardingFragment"
         android:name="com.example.shoestore.InstructionsOnBoardingFragment"
-        android:label="InstructionsOnBoardingFragment" />
+        android:label="@string/instructions">
+        <action
+            android:id="@+id/action_instructionsOnBoardingFragment_to_shoeListingFragment"
+            app:destination="@id/shoeListingFragment"
+            app:popUpTo="@id/welcomeOnBoardingFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/shoeListingFragment"
+        android:name="com.example.shoestore.ShoeListingFragment"
+        android:label="@string/shoe_list">
+        <action
+            android:id="@+id/action_shoeListingFragment_to_shoeDetailsFragment"
+            app:destination="@id/shoeDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/shoeDetailsFragment"
+        android:name="com.example.shoestore.ShoeDetailsFragment"
+        android:label="@string/shoe_details" />
 </navigation>
