--- a/app/src/main/res/layout/fragment_welcome_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_welcome_on_boarding.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".WelcomeOnBoardingFragment">
+        tools:context=".view.WelcomeOnBoardingFragment">
 
         <TextView
             android:layout_width="match_parent"
