--- a/app/src/main/res/layout/item_shoe.xml
+++ b/app/src/main/res/layout/item_shoe.xml
@@ -84,7 +84,7 @@
 
         <variable
             name="shoeDetails"
-            type="com.example.shoestore.ShoeDetails" />
+            type="com.example.shoestore.model.ShoeDetails" />
     </data>
 
 
