updated the style and colors of the buttons

--- a/app/src/main/res/layout/fragment_instructions_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_instructions_on_boarding.xml
@@ -23,8 +23,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/start" />
+            android:text="@string/start"
+            style="@style/btn_style"/>
     </LinearLayout>
 </layout>
