--- a/app/src/main/res/layout/fragment_welcome_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_welcome_on_boarding.xml
@@ -30,8 +30,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_instructions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/btn_style"
             android:text="@string/instructions"
             app:layout_constraintTop_toBottomOf="@id/instructions_label"
             android:layout_marginTop="20dp"
