--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,18 +10,16 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_margin="30dp"
             android:text="@string/login"
+            style="@style/btn_style"
             app:layout_constraintEnd_toStartOf="@id/btn_join"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_password" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_join"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/btn_style"
             android:layout_margin="30dp"
             android:text="@string/join_now"
             app:layout_constraintEnd_toEndOf="parent"
