--- a/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/app/src/main/res/layout/fragment_shoe_details.xml
@@ -84,10 +84,10 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_Shoe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/add_shoe" />
+            android:text="@string/add_shoe"
+            style="@style/btn_style"
+            />
     </LinearLayout>
 
 
